# sleigh

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.test.yml  docker-compose.yml  gunicorn.conf.py  main.py  requirements.txt  start.sh
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md
.github/workflows/: analysis.yml  ci.yml  docker.yml
config/: server.json
config/events/: README.txt
config/preflight/: README.txt  _default.json
config/rules/: README.txt
config/rules/global/: example.json
config/ssl/: .gitignore
extra/: nginx.conf  openapi.yml  start.sh
sleigh/: __init__.py  cookie.py  setup.cfg  setup.py
sleigh/routes/: __init__.py  _event_upload.py  _not_implemented.py  _preflight.py  _rule_download.py
sleigh/tests/: __init__.py  random.py  serials.json  test_event_upload.py  test_preflight.py
